Update swag docs and refactor
