# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Avito-tech backend trainee task 2020",
+        "title": "Avito.tech's task for backend trainee (2020 year)",
         "contact": {
             "name": "Lev Yuvensky",
             "email": "levayu22@gmail.com"
@@ -13,7 +13,7 @@
     "paths": {
         "/chats/add": {
             "post": {
-                "description": "Create a new user with name and users.",
+                "description": "Create a new chat with name and list of users.",
                 "consumes": [
                     "application/json"
                 ],
@@ -26,22 +26,136 @@
                 "summary": "Create new chat",
                 "operationId": "createChat",
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/v1.chatId"
+                            "$ref": "#/definitions/models.ChatId"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/v1.errorJSON"
+                            "$ref": "#/definitions/apperror.ErrorJSON"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/v1.errorJSON"
+                            "$ref": "#/definitions/apperror.ErrorJSON"
+                        }
+                    }
+                }
+            }
+        },
+        "/chats/get": {
+            "post": {
+                "description": "Get a list of user chats by user ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chat"
+                ],
+                "summary": "Get a list of user chats",
+                "operationId": "getUserChats",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.GetUserChatsDTOAnswer"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.ErrorJSON"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.ErrorJSON"
+                        }
+                    }
+                }
+            }
+        },
+        "/messages/add": {
+            "post": {
+                "description": "Create a new message with chat's id, author's id and text.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "message"
+                ],
+                "summary": "Create new message",
+                "operationId": "createMessage",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.MessageId"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.ErrorJSON"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.ErrorJSON"
+                        }
+                    }
+                }
+            }
+        },
+        "/messages/get": {
+            "post": {
+                "description": "Get a list of chat messages by chat ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "message"
+                ],
+                "summary": "Get a list of chat messages",
+                "operationId": "GetChatMessages",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Message"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.ErrorJSON"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.ErrorJSON"
                         }
                     }
                 }
@@ -65,19 +179,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1.userId"
+                            "$ref": "#/definitions/models.UserId"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/v1.errorJSON"
+                            "$ref": "#/definitions/apperror.ErrorJSON"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/v1.errorJSON"
+                            "$ref": "#/definitions/apperror.ErrorJSON"
                         }
                     }
                 }
@@ -85,15 +199,7 @@
         }
     },
     "definitions": {
-        "v1.chatId": {
-            "type": "object",
-            "properties": {
-                "chatId": {
-                    "type": "integer"
-                }
-            }
-        },
-        "v1.errorJSON": {
+        "apperror.ErrorJSON": {
             "type": "object",
             "properties": {
                 "message": {
@@ -101,7 +207,63 @@
                 }
             }
         },
-        "v1.userId": {
+        "models.ChatId": {
+            "type": "object",
+            "properties": {
+                "chatId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.GetUserChatsDTOAnswer": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
+        "models.Message": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "type": "integer"
+                },
+                "chat": {
+                    "type": "integer"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.MessageId": {
+            "type": "object",
+            "properties": {
+                "messageId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.UserId": {
             "type": "object",
             "properties": {
                 "userId": {
