# internal/endpoints/http/handlers/chat.go
@@ -28,70 +28,66 @@ func NewChatRoutes(handler *gin.RouterGroup, chatService *services.ChatService, 
 	}
 }
 
-type chatId struct {
-	Id int `json:"chatId"`
-}
-
 // CreateChat
 // @Summary     Create new chat
-// @Description Create a new chat with name and users.
+// @Description Create a new chat with name and list of users.
 // @ID          createChat
 // @Tags  	    chat
 // @Accept      json
 // @Produce     json
-// @Success     200 {object} chatId
-// @Failure	    400 {object} errorJSON
-// @Failure	    500 {object} errorJSON
+// @Success     201 {object} models.ChatId
+// @Failure	    400 {object} apperror.ErrorJSON
+// @Failure	    500 {object} apperror.ErrorJSON
 // @Router      /chats/add [post]
 func (r *chatRoutes) CreateChat(c *gin.Context) {
 	chatDTO := models.CreateChatDTO{}
 
 	err := c.BindJSON(&chatDTO)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, errorJSON{err.Error()})
+		c.JSON(http.StatusBadRequest, apperror.ErrorJSON{Message: err.Error()})
 		return
 	}
 
 	newChatID, err := r.chatService.CreateChat(chatDTO)
 	if err != nil {
 		if errors.Is(err, apperror.IDNotFound) {
-			c.JSON(http.StatusBadRequest, errorJSON{err.Error()})
+			c.JSON(http.StatusBadRequest, apperror.ErrorJSON{Message: err.Error()})
 			return
 		}
-		c.JSON(http.StatusInternalServerError, errorJSON{apperror.InternalServerError.Error()})
+		c.JSON(http.StatusInternalServerError, apperror.ErrorJSON{Message: apperror.InternalServerError.Error()})
 		r.logger.Error(err.Error())
 		return
 	}
-	c.JSON(http.StatusCreated, chatId{newChatID})
+	c.JSON(http.StatusCreated, newChatID)
 }
 
 // GetUserChats
-// @Summary     Get a list of user chats by ID
-// @Description Get a list of user chats by ID.
+// @Summary     Get a list of user chats
+// @Description Get a list of user chats by user ID.
 // @ID          getUserChats
 // @Tags  	    chat
 // @Accept      json
 // @Produce     json
-// @Success     200 {list} models.GetUserChatsDTOAnswer
-// @Failure	    400 {object} errorJSON
-// @Failure	    500 {object} errorJSON
+// @Success     200 {array} models.GetUserChatsDTOAnswer
+// @Failure	    400 {object} apperror.ErrorJSON
+// @Failure	    500 {object} apperror.ErrorJSON
 // @Router      /chats/get [post]
 func (r *chatRoutes) GetUserChats(c *gin.Context) {
 	userChatsDTORequest := models.GetUserChatsDTORequest{}
 
 	err := c.BindJSON(&userChatsDTORequest)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, errorJSON{err.Error()})
+		c.JSON(http.StatusBadRequest, apperror.ErrorJSON{Message: err.Error()})
 		return
 	}
 
 	userChatsDTOAnswer, err := r.chatService.GetUserChats(userChatsDTORequest)
 	if err != nil {
 		if errors.Is(err, apperror.IDNotFound) {
-			c.JSON(http.StatusBadRequest, errorJSON{err.Error()})
+			c.JSON(http.StatusBadRequest, apperror.ErrorJSON{Message: err.Error()})
 			return
 		}
-		c.JSON(http.StatusInternalServerError, errorJSON{apperror.InternalServerError.Error()})
+		c.JSON(http.StatusInternalServerError, apperror.ErrorJSON{Message: apperror.InternalServerError.Error()})
 		r.logger.Error(err.Error())
 		return
 	}
