# internal/models/message.go
@@ -2,6 +2,14 @@ package models
 
 import "time"
 
+type Message struct {
+	Id        int       `json:"id"`
+	ChatId    int       `json:"chat"`
+	UserId    int       `json:"author"`
+	Text      string    `json:"text"`
+	CreatedAt time.Time `json:"createdAt"`
+}
+
 type CreateMessageDTO struct {
 	ChatId int    `json:"chat"`
 	UserId int    `json:"author"`
@@ -12,10 +20,6 @@ type GetChatMessagesDRORequest struct {
 	ChatId int `json:"chat"`
 }
 
-type Message struct {
-	Id        int       `json:"id"`
-	ChatId    int       `json:"chat"`
-	UserId    int       `json:"author"`
-	Text      string    `json:"text"`
-	CreatedAt time.Time `json:"createdAt"`
+type MessageId struct {
+	Id int `json:"messageId"`
 }
